# small-models

./: README.md
ai/: main.py  pyproject.toml
ai/app/routers/: flant5_router.py  yolo_face_router.py
ai/app/schemas/: flant5_schema.py  yolo_face_schema.py
ai/app/services/: flant5_service.py  yolo_face_service.py
